[gd_scene load_steps=12 format=3 uid="uid://ghym7xfsxdrf"]

[ext_resource type="Texture2D" uid="uid://cc1klfhtqilyc" path="res://Battle/ZoomedInNewShip.png" id="1_fy6vb"]
[ext_resource type="Script" path="res://Battle/BoardingBattleTutorial.gd" id="1_offb7"]
[ext_resource type="Script" path="res://Battle/Camera.gd" id="2_rcx86"]
[ext_resource type="Script" path="res://Battle/BattleManagerTutorial.gd" id="3_5ftdp"]
[ext_resource type="Texture2D" uid="uid://cfvbl5eyme6xx" path="res://Battle/Plank.png" id="4_qvk0i"]
[ext_resource type="Texture2D" uid="uid://8krxpdlfbgax" path="res://KelptownInn/assets/arrow.png" id="5_arrow"]
[ext_resource type="Script" path="res://KelptownInn/BobbingArrow.gd" id="6_arrowptr"]
[ext_resource type="FontFile" uid="uid://bbvvk8cijnn3b" path="res://PlunderFont.ttf" id="7_font"]
[ext_resource type="Texture2D" uid="uid://d7uv4iugn3ig" path="res://Ships/enemybrokenzoomedin.png" id="8_broken_zoom"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87wue"]
size = Vector2(624, 544)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0xrr"]
size = Vector2(225, 112)

[node name="BoardingBattle2" type="Node2D"]
script = ExtResource("1_offb7")
progress_point = null

[node name="EnemyShip" type="Sprite2D" parent="."]
position = Vector2(-128, -256)
texture = ExtResource("8_broken_zoom")
centered = false

[node name="PlayerShip" type="Sprite2D" parent="."]
position = Vector2(-128, 176)
texture = ExtResource("1_fy6vb")
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(224, 304)
script = ExtResource("2_rcx86")
boundary_area_path = NodePath("../Area2D")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(280, 208)
shape = SubResource("RectangleShape2D_87wue")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -32.0
offset_top = -64.0
offset_right = 592.0
offset_bottom = 480.0
mouse_filter = 2
color = Color(0.223529, 0.262745, 0.596078, 0.8)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -2
offset_left = -32.0
offset_top = -64.0
offset_right = 592.0
offset_bottom = 480.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="BattleManager" type="Node2D" parent="."]
script = ExtResource("3_5ftdp")

[node name="PlankContainer" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="PlankContainer"]
position = Vector2(139, 200)
texture = ExtResource("4_qvk0i")

[node name="Sprite2D2" type="Sprite2D" parent="PlankContainer"]
position = Vector2(189, 200)
texture = ExtResource("4_qvk0i")

[node name="Sprite2D3" type="Sprite2D" parent="PlankContainer"]
position = Vector2(239, 200)
texture = ExtResource("4_qvk0i")

[node name="Sprite2D4" type="Sprite2D" parent="PlankContainer"]
position = Vector2(289, 200)
texture = ExtResource("4_qvk0i")

[node name="Sprite2D5" type="Sprite2D" parent="PlankContainer"]
position = Vector2(341, 200)
texture = ExtResource("4_qvk0i")

[node name="CrewContainer" type="Node2D" parent="."]
z_index = 1

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemySpawnArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySpawnArea"]
position = Vector2(240.5, 88)
shape = SubResource("RectangleShape2D_h0xrr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -95.0
offset_right = 240.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("7_font")
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
z_index = 100
texture = ExtResource("5_arrow")
script = ExtResource("6_arrowptr")
